-Completed swagger.json file, updated descriptions and documentation
-Fixed a type error caused by a mismatch in the Product interface

-Fixed type error in inventory.ts
